# Credence-Contracts

./: PR_CREATION_INSTRUCTIONS.md  PR_INSTRUCTIONS_EVENT_INDEXING.md  README.md  base.rs  diff_lib.txt  lib_base.rs  ours.rs  test.rs  test_bond_lifecycle_events.rs  test_slash_bond.rs  theirs.rs
.cargo/: config.toml
contracts/credence_bond/: Cargo.toml  Cargo.toml_main.toml
contracts/credence_bond/docs/: parameters.md
contracts/credence_bond/security/: SECURITY_ANALYSIS.md
contracts/credence_bond/src/: access_control.rs  batch.rs  early_exit_penalty.rs  events.rs  fee_tests.rs  lib.rs  lib_main.rs  migration.rs  nonce.rs  nonce.rs_main.rs  normalization.rs  rolling_bond.rs  safe_token.rs  slashing.rs  status_snapshot.rs  test.rs  test_attestation_types.rs  test_create_bond.rs  test_decimal_normalization.rs  test_decimals.rs  test_early_exit_penalty.rs  test_emergency.rs  test_events_v2.rs  test_helpers.rs  test_increase_bond.rs  test_long_horizon.rs  test_math.rs  test_parameters.rs  test_tiered_bond.rs  test_upgrade_auth.rs  test_validation.rs  test_withdraw_bond.rs  test_zero_address.rs  tiered_bond.rs  token_integration_test.rs  validation.rs  weighted_attestation.rs
contracts/credence_bond/src/fuzz/: mod.rs  test_bond_fuzz.rs  test_slashing_tier_invariants.rs
contracts/credence_bond/src/integration/: mod.rs
contracts/credence_bond/src/types/: mod.rs
contracts/credence_bond/tests/: migration_test.rs  test_access_control.rs  test_fee_on_transfer_rejection.rs
docs/: EVENT_INDEXING_MIGRATION.md  admin-roles.md  budget-ceilings.md  credence_bond_api.md  (+7 more)
(+13 files in other folders)
